# syntalos

src/: meson.build  mlinkmodule.cpp  mlinkmodule.h  timesync.cpp  timesync.h
src/fabric/streams/: datatypes.h
src/mlink/: ipc-types-private.h  meson.build  modulelink.cpp  modulelink.h  test-client.cpp  test-master.cpp
